--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,22 @@ version: '3'
 services:
   db:
     image: postgres:latest
-    ports:
-      - "5432:5432"
     environment:
       POSTGRES_DB: propertydb
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
   redis:
     image: redis:latest
     ports:
       - "6379:6379"
+    volumes:
+      - redis_data:/data
+
+volumes:
+  postgres_data:
+  redis_data:
